# CodeGenrator-Compiler

./: CMakeLists.txt
Input_Files/: sample1.c  sample10.c  sample3.c  sample5.c  sample6.c  sample7.c  sample8.c  sample9.c
compiler_files/: CodeGenerator.c  CodeGenerator.c.rej  gram.c  heap.c  heap.h  lexer.c  symtab.c  symtab.h
